# SAR

./: .clang-tidy  .gitignore  Benchmark.h  CMakeCache.txt  CMakeLists.txt  Doxyfile  EngineModel.h  EngineModel_slow.h  Logger.h  Main.cpp  README.md  RungeKutta.h  Types.h  _main_8cpp.html  _main_8cpp_source.html  benchmark_comparison.cpp  benchmark_main.cpp  class_engine_model.js  class_engine_model_test.html  error_messages.h  examples.js  functions_func.html  functions_vars.html  globals_func.html  globals_type.html  group___diagnostic_coefficients.js  hierarchy.js  index.html  lint_report.txt  logger_config.json  menudata.js  navtreedata.js  simulation_results.csv  test__engine_8cpp.js  test_engine.cpp  topics.html  visualize.py
docs/: generate_docs.md  linting.md  performance.md
docs/code/html/: _c_1_2_s_a_r_2_runge_kutta_8h-example.html  _engine_model_8h.html  _engine_model_8h_source.html  _main_8cpp.js  _runge_kutta_8h.js  _runge_kutta_8h_source.html  _types_8h.html  class_engine_model_test-members.html  class_r_k_solver-members.html  classes.html  doxygen_crawl.html  examples.html  files.html  files_dup.js  group___diagnostic_coefficients.html  group___disturbance_parameters.js  navtreeindex0.js  test__engine_8cpp_source.html
docs/code/html/search/: all_10.js  all_a.js  all_e.js  classes_0.js  groups_1.js  variables_0.js  variables_2.js  variables_3.js
html/: _engine_model_8h.js  _runge_kutta_8h.html  _types_8h.js  _types_8h_source.html  annotated.html  annotated_dup.js  class_engine_model-members.html  class_engine_model.html  class_engine_model_test.js  class_r_k_solver.html  class_r_k_solver.js  functions.html  globals.html  globals_vars.html  group___disturbance_parameters.html  group___system_parameters.html  group___system_parameters.js  hierarchy.html  test__engine_8cpp.html  topics.js
html/search/: all_1.js  all_6.js  all_d.js  files_0.js  files_3.js  functions_2.js  functions_4.js  functions_5.js  groups_0.js  pages_0.js  typedefs_0.js  typedefs_1.js  variables_1.js  variables_5.js
latex/: _c_1_2_s_a_r_2_runge_kutta_8h-example.tex  _engine_model_8h.tex  _engine_model_8h_source.tex  _main_8cpp.tex  _runge_kutta_8h.tex  _runge_kutta_8h_source.tex  _types_8h.tex  _types_8h_source.tex  annotated.tex  class_engine_model.tex  class_engine_model_test.eps  class_engine_model_test.tex  class_r_k_solver.tex  examples.tex  files.tex  group___diagnostic_coefficients.tex  group___disturbance_parameters.tex  group___system_parameters.tex  hierarchy.tex  md__r_e_a_d_m_e.tex  refman.tex  topics.tex
sast_reports/: clang_tidy_full_report.txt  clang_tidy_report.txt  combined_report.txt  cppcheck_report.txt
search/: all_3.js  all_4.js  all_7.js  all_8.js  all_9.js  all_f.js  classes_1.js  functions_1.js  functions_6.js  groups_3.js  searchdata.js  variables_4.js
